--- a/login.html
+++ b/login.html
@@ -38,7 +38,8 @@
 
 <!-- SweetAlert2 JS -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script>
+<script src="js/login.js"></script>
+<!-- <script>
   let isSubmitting = false;
 
   function handleLogin(event) {
@@ -86,7 +87,7 @@
       showConfirmButton: false
     });
   }
-</script>
+</script> -->
 
 </body>
 </html>
