--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro y Seguimiento</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <!-- SweetAlert2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
     <link rel="shortcut icon" href="img/logoIzq.png" type="image/x-icon">
@@ -28,7 +30,7 @@
     <main class="container mt-4">
         <section id="formulario">
             <div class="titulo-gestion-efectivos d-flex justify-content-between align-items-center flex-wrap gap-2">
-                <h2 class="mb-0">Gestión de Participantes</h2>
+                <h2 class="mb-0 title">Gestión de Participantes</h2>
                 <div class="d-flex align-items-center" role="search">
                     <input type="text" class="form-control" id="filter-nombre" name="filter-nombre" placeholder="Filtrar">
                 </div>
@@ -259,9 +261,27 @@
             </div>
         </form>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+        <!-- SweetAlert2 -->
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
         <script src="js/auth.js"></script>
         <script src="js/reclutamientos.js"></script>
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+                const guardarBtn = document.querySelector('.modal-footer .btn-morado');
+                if (guardarBtn) {
+                    guardarBtn.addEventListener('click', function(e) {
+                        e.preventDefault();
+                        Swal.fire({
+                            icon: 'success',
+                            title: '¡Guardado exitoso!',
+                            text: 'Los datos han sido guardados correctamente.',
+                            confirmButtonColor: '#9b51e0'
+                        });
+                    });
+                }
+            });
+        </script>
 </body>
 </html>
