--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.all.min.js"></script>
         <script src="js/auth.js"></script>
         <script src="js/reclutamientos.js"></script>
-        <script>
+        <!-- <script>
             document.addEventListener('DOMContentLoaded', function() {
                 const guardarBtn = document.querySelector('.modal-footer .btn-morado');
                 if (guardarBtn) {
@@ -282,6 +282,6 @@
                     });
                 }
             });
-        </script>
+        </script> -->
 </body>
 </html>
