--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
                 <!-- Se agrega padding horizontal -->
                 <div class="px-4 mx-auto w-75" id="modalBodyContentInner"></div>
             </div>
-            <div class="modal-footer">
-                <button type="submit" class="btn btn-morado">Guardar</button>
-            </div>
+            <!-- Quita el modal-footer vacío -->
         </div>
     </div>
 </div>
@@ -94,13 +92,14 @@
             <div class="card mb-4 p-3 shadow-sm border-0">
                 <h4 class="form-section-title">Datos sociodemográficos</h4>
                 <div class="row g-3 mb-2">
-                    <div class="col-md-4"><label for="origen" class="form-label">Origen dato</label><input id="origen" class="form-control" data-field="origen" name="origen" type="text"></div>
+                    <div class="col-md-4"><label for="origen" class="form-label">Origen dato</label><input id="origen" class="form-control" data-field="origen" name="origen" type="text" readonly></div>
                     <div class="col-md-4"><label for="nombre_apellido" class="form-label">Nombre y Apellido</label><input id="nombre_apellido" class="form-control" data-field="nombre_apellido" name="nombre_apellido" type="text"></div>
                     <div class="col-md-4"><label for="cedula" class="form-label">Cédula</label><input id="cedula" class="form-control" data-field="cedula" name="cedula" type="text"></div>
                 </div>
                 <div class="row g-3 mb-2">
-                    <div class="col-md-4"><label for="nacionalidad" class="form-label">Nacionalidad</label><input id="nacionalidad" class="form-control" data-field="nacionalidad" name="nacionalidad" type="text"></div>
-                    <div class="col-md-4"><label for="edad" class="form-label">Edad</label><input id="edad" class="form-control" data-field="edad" name="edad" type="number"></div>
+                    <div class="col-md-4"><label for="nacionalidad" class="form-label">Nacionalidad</label><input id="nacionalidad" class="form-control" data-field="nacionalidad" name="nacionalidad" type="text" readonly></div>
+                    <div class="col-md-4"><label for="fecha_nacimiento" class="form-label">Fecha de nacimiento</label><input id="fecha_nacimiento" class="form-control" data-field="fecha_nacimiento" name="fecha_nacimiento" type="date"></div>
+                    <div class="col-md-4"><label for="edad" class="form-label">Edad</label><input id="edad" class="form-control" data-field="edad" name="edad" type="number" readonly></div>
                     <div class="col-md-4"><label for="direccion" class="form-label">Dirección</label><input id="direccion" class="form-control" data-field="direccion" name="direccion" type="text"></div>
                 </div>
                 <div class="row g-3 mb-2">
@@ -122,6 +121,7 @@
                     <div class="col-md-4"><label for="bebe_nombre" class="form-label">Nombre del bebé</label><input id="bebe_nombre" class="form-control" data-field="bebe_nombre" name="bebe_nombre" type="text"></div>
                     <div class="col-md-4"><label for="bebe_nacimiento" class="form-label">Fecha de nacimiento del bebé</label><input id="bebe_nacimiento" class="form-control" data-field="bebe_nacimiento" name="bebe_nacimiento" type="date"></div>
                     <div class="col-md-4"><label for="bebe_edad_meses" class="form-label">Edad del bebé (Meses)</label><input id="bebe_edad_meses" class="form-control" data-field="bebe_edad_meses" name="bebe_edad_meses" type="number"></div>
+                    <div class="col-md-4"><label for="bebe_edad_primer" class="form-label">Edad del bebé primer filtro (Meses)</label><input id="bebe_edad_primer" class="form-control" data-field="bebe_edad_primer" name="bebe_edad_primer" type="number" readonly></div>
                 </div>
                 <div class="row g-3 mb-2">
                     <div class="col-md-4"><label for="bebe_sexo" class="form-label">Sexo del bebé</label><input id="bebe_sexo" class="form-control" data-field="bebe_sexo" name="bebe_sexo" type="text"></div>
@@ -256,10 +256,28 @@
                     <textarea class="form-control" id="observaciones_bono" data-field="observaciones_bono" name="observaciones_bono" rows="3"></textarea>
                 </div>
             </div>
-            <div class="d-flex justify-content-center mt-4">
-                <!-- El botón Guardar ahora está en la modal-footer -->
+            <!-- Mueve el botón aquí, dentro del formulario -->
+            <div class="d-flex justify-content-center mt-4 sticky-save-btn">
+                <button type="submit" class="btn btn-morado">Guardar</button>
             </div>
         </form>
+
+        <!-- Modal Popup -->
+        <div class="modal fade modal-custom" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="infoModalLabel">Detalle Participante / Reclutamiento</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                    </div>
+                    <div class="modal-body" id="modalBodyContent">
+                        <!-- Se agrega padding horizontal -->
+                        <div class="px-4 mx-auto w-75" id="modalBodyContentInner"></div>
+                    </div>
+                    <!-- Quita el modal-footer vacío -->
+                </div>
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
